--- a/workshops/index.html
+++ b/workshops/index.html
@@ -46,8 +46,6 @@
 			<a target="_blank" href="../assets/docs/2018 Westwater.pdf">PDF</a> or
 			<a target="_blank" href="../assets/docs/2018 Westwater.docx">Word document</a>
 			</p>
-
-
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
@@ -110,6 +108,15 @@
          <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
                </div>
 
+	<a href="#carmel2018" class="animated_popup"><h1>Carmel, California</h1></a>
+      	  <h2>August 11th and August 12th 2018</h2>
+             <div id="carmel2018" style="display:none" class="image-popup" class="book-details-popup">
+                 <h3>Carmel, California</h3>
+             <p>August 11th and August 12th 2018</p>
+             <p>Make your arrangements early!</p>
+                <p>Details to follow.</p>
+                 <p>Contact Andrew Allison <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a></p>
+             </div>
 
          <a href="#tumwater2018" class="animated_popup"><h1>Olympia, Washington</h1></a>
            <h2>August 17th to August 19th 2018</h2>
@@ -119,6 +126,16 @@
 		Details to follow.</br>
 		Contact:  Andy Holmes <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
 	    </div>
+
+	<a href="#croatia2018" class="animated_popup"><h1>Croatia</h1></a>
+	   <h2>September 15th to September 17th 2018</h2>
+             <div id="croatia2018" style="display:none" class="image-popup" class="book-details-popup">
+                 <h3>Croatia</h3>
+             <p>September 15th to September 17th 2018</p>
+             <p>Make your arrangements early!</p>
+                <p>Details to follow.</p>
+                 <p>Contact Martina Mestrovic <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
+             </div>
 
 	    	<a href="#crete2018" class="animated_popup"><h1>Crete, Greece</h1></a>
        		<h2>September 21st to September 26th 2018</h2>
