--- a/workshops/index.html
+++ b/workshops/index.html
@@ -110,10 +110,30 @@
 	<a href="#carmel2018" class="animated_popup"><h1>Carmel, California</h1></a>
       	  <h2>August 11th and August 12th 2018</h2>
              <div id="carmel2018" style="display:none" class="image-popup" class="book-details-popup">
-                 <h3>Carmel, California</h3>
-             <p>August 11th and August 12th 2018</p>
-             <p>Make your arrangements early!</p>
-                <p>Details to follow.</p>
+                 <h3>Carmel, California</h3><p>
+		<b>Aug. 11 St. Philip’s Lutheran Church, 8065 Carmel Valley Road, Carmel,  CA  93923</b></br>
+		</br>
+		9:30 - 12:00 Slow Set, 2:00 -   4:30 Hao Form and Push Hands
+		</p>
+
+		<p>
+		<b>Aug 12 Carmel Foundation, Lincoln St. & 8th Ave, Carmel-by-the-Sea, 93921</b></br>
+		</br>
+		9:30 - 12:00 Slow Set, 2:00 - 4:30 Hao Form and Push Hands
+		</p>
+
+		<p>
+		Cost: $100 minimum for up to two classes, $40 per additional class.</br>
+		Preregistration with minimum $50 deposit required by 31st May, 2018
+		</p>
+		<p>
+		Checks, payable to Alex Dong, can be sent directly to Alex at:</br>
+		PO Box 750962,Forest Hills NY 11375, or</br>
+		via ACH to Routing # 021000021 a/c 766727796, or</br>
+		to Andrew Allison, 25420 Via Cicindela, Carmel, CA 93923-8412
+		</p>
+
+             
                  <p>Contact Andrew Allison <a href="mailto:allison.aa@gmail.com">allison.aa@gmail.com</a></p>
              </div>
 
