--- a/workshops/index.html
+++ b/workshops/index.html
@@ -142,7 +142,7 @@
            <div id="tumwater2018" style="display:none" class="image-popup" class="book-details-popup">
               <h3>Olympia, Washington</h3>
 		<p>August 17th to August 19th</br>
-		Full details are <a  target="_blank" href="http://andyholmes.us/Schedule.html">here</a>/br>
+		Full details are <a  target="_blank" href="http://andyholmes.us/Schedule.html">here</a></br>
 		Contact:  Andy Holmes <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
 	    </div>
 
