--- a/store/index.html
+++ b/store/index.html
@@ -79,14 +79,11 @@
           <h3>Workshop Notes</h3>
           <p>Master Alex Dong's new book, Taijiquan Explained - Workshop Notes is the most clearly written book on taijiquan that I have read. These are real notes from his real workshops over the past few years, I know because I was at many of them. His generosity in sharing the information in these notes with the greater Taiji community, not just his students, took courage and is unprecedented in his family and most masters in general. I can't recommend this book enough. I have it with me all the time, I quote it all the time, my students are quoting it all the time. - Toni DeMoulin</p>
         </div>
-        <h6>Out of Stock
-          <!-- <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <h6><form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="37RLRFE3NRQ2J">
         <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
-        </form>
-        -->
-        </h6>
+        </form></h6>
       </div>
 
       <div class="store-book-container">
