--- a/workshops/index.html
+++ b/workshops/index.html
@@ -62,7 +62,7 @@
 		For Friday will be venue in the Chateau Park in Praha  4 - Kunratice. 
 		In case of rain in the local place in Sokolovna building.</p>
 	<p>
-	Map of Chateau Park: <a href="https://www.google.com/maps/place/Elementary+School+and+Kindergarten+Jesenice/@49.9717483,14.5102433,17z/data=!3m1!4b1!4m5!3m4!1s0x470b902a24a61661:0xff2316dbcdd6bf5f!8m2!3d49.9717483!4d14.512432" target="_blank">Zamecky park Kunratice</a>
+	Map of Chateau Park: <a href="https://www.google.com/maps/place/Zámecký+park,+148+00+Praha-Kunratice,+Czechia/@50.0095828,14.4808102,17z/data=!3m1!4b1!4m5!3m4!1s0x470b919cc78d1923:0x1168aa7998f5e9ae!8m2!3d50.0091521!4d14.4832921" target="_blank">Zamecky park Kunratice</a>
 	</p>
 	<p>
 	Map of Sokolovna: <a href="https://www.google.com/maps/place/TJ+Sokol+Kunratice/@50.0130828,14.4852843,17z/data=!3m1!4b1!4m5!3m4!1s0x470b918471ca056d:0x22ca0b90e7f31093!8m2!3d50.0130828!4d14.487473" target="_blank">Sokolovna Kunratice</a>
