--- a/workshops/index.html
+++ b/workshops/index.html
@@ -41,16 +41,28 @@
        <h2>June 8th to June 10th 2018</h2>
         <div id="uk2018" style="display:none" class="image-popup" class="book-details-popup">
      <h3>London, UK</h3>
-           
-	<p>Friday June 8th Evening class: Qigong and basic Tai Chi &pound;25</br>
-      	Saturday June 9th Morning: Slow form &pound;35</br>
-      	Afternoon: How to use rooting, structure, energy in Slow form  &pound;35</br>
-      	Sunday June 10th Morning: Sticks and Sword  &pound;35</br>
-      	Afternoon: Push hands and applications  &pound;35</br>
-      	Cost is &pound;150 for all the classes.</br>
-      	Friday evening and Saturday  &pound;85, Saturday only £65.</br>
-      	Exact times and venue to be confirmed.</br>
-</p>
+		<p><b>Note the change of venue.</b></p>
+		<p>
+		Barking Park</br>
+		Friday 3:30pm to 5:30pm-Fajin and Fast form--&pound;30 additional</br>
+		Friday June 8: Evening class-Qigong and basic Tai Chi--&pound;25 6pm to 8pm</br>
+		</br>
+		Village Community Hall</br>
+		Vicarage Road,</br>
+		Dagenham</br>
+		RM10 9SD</br>
+		</br>
+		Saturday June 9: morning-Slow form--&pound;35 10:30am to 12:30pm</br>
+		Afternoon-How to use rooting, structure, energy in Slow form--&pound;35 2pm to 4:30pm</br>
+		Sunday June 10: morning-Sticks and Sword--&pound;35 10:30am to 12:30pm</br>
+		Afternoon-Push hands and applications--&pound;35 2pm to 4:30pm</br>
+		&pound;150 for all the classes. (excluding Fri. afternoon).</br>
+		Friday evening and Saturday-&pound;-85</br>
+		</p>
+
+
+	
+	</p>
         <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
         </div>
 
