--- a/workshops/index.html
+++ b/workshops/index.html
@@ -44,8 +44,8 @@
 		<p><b>Note the change of venue.</b></p>
 		<p>
 		Barking Park</br>
-		Friday 3:30pm to 5:30pm-Fajin and Fast form--&pound;30 additional</br>
-		Friday June 8: Evening class-Qigong and basic Tai Chi--&pound;25 6pm to 8pm</br>
+	  	Friday June 8: Afternoon-3:30pm to 5:30pm-Fajin and Fast form--&pound;30 additional</br>
+		Evening class-Qigong and basic Tai Chi--&pound;25 6pm to 8pm</br>
 		</br>
 		Village Community Hall</br>
 		Vicarage Road,</br>
@@ -57,7 +57,7 @@
 		Sunday June 10: morning-Sticks and Sword--&pound;35 10:30am to 12:30pm</br>
 		Afternoon-Push hands and applications--&pound;35 2pm to 4:30pm</br>
 		&pound;150 for all the classes. (excluding Fri. afternoon).</br>
-		Friday evening and Saturday-&pound;-85</br>
+		Friday evening and Saturday--&pound;85</br>
 		</p>
 
 
