--- a/workshops/index.html
+++ b/workshops/index.html
@@ -49,7 +49,7 @@
 		Fricker on 07847882012.</p>
 		<p>
 		<a href="https://goo.gl/maps/wZpsBLQcMq62" target="_blank">Barking Park</a></br>
-	  	Friday June 8: Afternoon-3:30pm to 5:30pm-Fajin and Fast form--&pound;</br>
+	  	Friday June 8: Afternoon-Fajin and Fast form-&pound;30 3:30pm to 5:30pm</br>
 		Evening class-Qigong and basic Tai Chi--&pound;25 6pm to 8pm</br>
 		</br>
 		<a href="https://goo.gl/maps/71knhnrEnGF2" target="_blank">Village Community Hall</a></br>
