--- a/workshops/index.html
+++ b/workshops/index.html
@@ -48,13 +48,12 @@
 		centre of Barking Park. Contact person on the day will be David
 		Fricker on 07847882012.</p>
 		<p>
-		<a href="https://goo.gl/maps/wZpsBLQcMq62" target="_blank">Barking Park</a></br>
+		Barking Park - <a href="https://goo.gl/maps/wZpsBLQcMq62" target="_blank">map</a></br>
 	  	Friday June 8: Afternoon-Fajin and Fast form-&pound;30 3:30pm to 5:30pm</br>
 		Evening class-Qigong and basic Tai Chi--&pound;25 6pm to 8pm</br>
 		</br>
-		<a href="https://goo.gl/maps/71knhnrEnGF2" target="_blank">Village Community Hall</a></br>
+		Village Community Hall - <a href="https://goo.gl/maps/71knhnrEnGF2" target="_blank">map</a></br>
 		Vicarage Road, Dagenham, RM10 9SD</br>
-		</br>
 		Saturday June 9: morning-Slow form--&pound;35 10:30am to 12:30pm</br>
 		Afternoon-How to use rooting, structure, energy in Slow form--&pound;35 2pm to 4:30pm</br>
 		Sunday June 10: morning-Sticks and Sword--&pound;35 10:30am to 12:30pm</br>
