--- a/workshops/index.html
+++ b/workshops/index.html
@@ -60,7 +60,7 @@
 		Afternoon-Push hands and applications--&pound;35 2pm to 4:30pm</br>
 		</br>
 		&pound;180 for all the classes.</br>
-		Friday evening, Saturday and Sunday--&pound;130
+		Friday evening, Saturday and Sunday--&pound;150</br>
 		Friday evening and Saturday--&pound;85</br>
 		</p>
         	<p>Contact: Email David Fricker at <a href="mailto:taichichaun@gmail.com">taichichaun@gmail.com</a> to express</br>
