--- a/workshops/index.html
+++ b/workshops/index.html
@@ -42,8 +42,6 @@
              <div id="croatia2018" style="display:none" class="image-popup" class="book-details-popup">
                  <h3>Croatia</h3>
              <p>September 15th to September 17th 2018</p>
-             <p>Make your arrangements early!</p>
-                <p>Details to follow.</p>
                  <p>Contact Martina Mestrovic <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
              </div>
 
@@ -58,7 +56,7 @@
 	        <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 	    
-	          <a href="#ny2018" class="animated_popup"><h1>Upstate New York - Forms</h1></a>
+	<a href="#ny2018" class="animated_popup"><h1>Upstate New York - Forms</h1></a>
         <h2>October 26th to October 28th 2018</h2>
           <div id="ny2018" style="display:none" class="image-popup" class="book-details-popup">
             <h3>Upstate New York</h3>
@@ -70,7 +68,31 @@
          <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
                 </div>
 
+	<a href="#moncton2018" class="animated_popup"><h1>Moncton, New Brunswick, Canada</h1></a>
+	<h2>November 2nd to November 4th 2018</h2>
+	<div id="moncton2018" style="display:none" class="image-popup" class="book-details-popup">
+  	 <h3>Moncton, New Brunswick, Canada</h3>
+  	 <p>November 2nd to November 4th 2018</p>
+  	 <p>Contact <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca</a> for more information.</p>
+	</div>
 
+	<a href="#china2018" class="animated_popup"><h1>Beijing, China</h1></a>
+	<h2>November 16th to November 18th</h2>
+	<div id="china2018" style="display:none" class="image-popup" class="book-details-popup">
+  	 <h3>Beijing, China</h3>
+  	 <p>November 16th to November 18th 2018</p>
+  	 <p>Contact <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a> for more information.</p>
+	</div>
+
+	<a href="#bh2018" class="animated_popup"><h1>Belo Horizonte, Brazil</h1></a>
+	<h2>November 30th to December 2nd 2018</h2>
+	<div id="bh2018" style="display:none" class="image-popup" class="book-details-popup">
+  	<h3>Belo Horizonte, Brazil</h3>
+  	 <p>November 30th to December 2nd 2018</p>
+  	 <p>Contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
+  	 Contact <a href="mailto:taichichuanbh@gmail.com">taichichuanbh@gmail.com</a> or
+  	 <a href="mailto:letaferreira@yahoo.com.br">letaferreira@yahoo.com.br</a> for more information.
+	</div>
 
       <!-- elements end -->
 
