--- a/workshops/index.html
+++ b/workshops/index.html
@@ -89,9 +89,8 @@
 	<div id="bh2018" style="display:none" class="image-popup" class="book-details-popup">
   	<h3>Belo Horizonte, Brazil</h3>
   	 <p>November 30th to December 2nd 2018</p>
-  	 <p>Contact <a href="mailto:martina.mestr@gmail.com">martina.mestr@gmail.com</a></p>
-  	 Contact <a href="mailto:taichichuanbh@gmail.com">taichichuanbh@gmail.com</a> or
-  	 <a href="mailto:letaferreira@yahoo.com.br">letaferreira@yahoo.com.br</a> for more information.
+  	 <p>Contact <a href="mailto:taichichuanbh@gmail.com">taichichuanbh@gmail.com</a> or
+  	 <a href="mailto:letaferreira@yahoo.com.br">letaferreira@yahoo.com.br</a> for more information.</p>
 	</div>
 
       <!-- elements end -->
