--- a/workshops/index.html
+++ b/workshops/index.html
@@ -74,7 +74,7 @@
   	 <h3>Moncton, New Brunswick, Canada</h3>
   	 <p>November 2nd to November 4th 2018</p>
 	 <p>Full details and a booking form: download
- 		<a target="_blank" href="../assets/docs/NB2018.docx">Word</a> or
+ 		<a target="_blank" href="../assets/docs/NB2018.doc">Word</a> or
  	 	<a target="_blank" href="../assets/docs/NB2018.pdf">PDF</a></p>
   	 <p>Contact <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca</a> for more information.</p>
 	</div>
