--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -47,7 +47,7 @@
 
     <h2>Wednesday mornings</h2>
       <p>131 W 72nd St. Room 4R<br/>
-      10am to 11am-Tai Chi and Qigong.<br/
+      10am to 11am-Tai Chi and Qigong.<br/>
       $100 per cycle of 4 classes or $30/class.<br/>
       Starting the Fast Form in September.</p>
 
