--- a/classes/newyorkcity/index.html
+++ b/classes/newyorkcity/index.html
@@ -52,7 +52,7 @@
       Starting the Fast Form in September.</p>
 
     <h2>Thursday evenings</h2>
-      <p>440 Studios - Room 3A/4F</br>
+      <p>440 Studios - Room 3A/4F<br/>
       6pm to 7pm-Qigong/room 3A (new students and drop-ins<br/>
       are welcome anytime). $70 per cycle of 4 or $20/class.<br/>
       7pm to 8:30pm-Tai Chi form/room 4F. $80 per cycle of<br/>
