--- a/workshops/index.html
+++ b/workshops/index.html
@@ -78,9 +78,27 @@
  	 	<a target="_blank" href="../assets/docs/NB2018.pdf">PDF</a></p>
   	 <p>Contact <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca</a> for more information.</p>
 	</div>
+	    
+	<a href="#hk2018" class="animated_popup"><h1>Hong Kong</h1></a>
+	<h2>November 11th 2018</h2>
+	<div id="hk2018" style="display:none" class="image-popup" class="book-details-popup">
+  	 <h3>Hong Kong</h3>
+  	 <p>November 11th 2018</p>
+         <p>Dong Style celebration</p>
+         <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
+	</div>
 
+	<a href="#guangzhou2018" class="animated_popup"><h1>Guangzhou</h1></a>
+	<h2>November 13th 2018</h2>
+	<div id="guangzhou2018" style="display:none" class="image-popup" class="book-details-popup">
+  	 <h3>Guangzhou</h3>
+  	 <p>November 13th 2018</p>
+ 	 <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
+	</div>
+
+	    
 	<a href="#china2018" class="animated_popup"><h1>Beijing, China</h1></a>
-	<h2>November 16th to November 18th</h2>
+	<h2>November 16th to November 18th 2018</h2>
 	<div id="china2018" style="display:none" class="image-popup" class="book-details-popup">
   	 <h3>Beijing, China</h3>
   	 <p>November 16th to November 18th 2018</p>
