--- a/workshops/index.html
+++ b/workshops/index.html
@@ -88,10 +88,10 @@
          <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
 
-	<a href="#guangzhou2018" class="animated_popup"><h1>Guangzhou</h1></a>
+	<a href="#guangzhou2018" class="animated_popup"><h1>Guangzhou, China</h1></a>
 	<h2>November 13th 2018</h2>
 	<div id="guangzhou2018" style="display:none" class="image-popup" class="book-details-popup">
-  	 <h3>Guangzhou</h3>
+  	 <h3>Guangzhou, China</h3>
   	 <p>November 13th 2018</p>
  	 <p>Contact  <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com</a></p>
 	</div>
