update workshops for alex

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -57,6 +57,46 @@
   	 <a href="mailto:letaferreira@yahoo.com.br">letaferreira@yahoo.com.br</a> for more information.</p>
 	</div>
 
+  <a href="#hawaii2019" class="animated_popup"><h1>Honolulu, Hawaii</h1></a>
+  <h2>January 5th and 6th 2019</h2>
+  <div id="hawaii2019" style="display:none" class="image-popup" class="book-details-popup">
+    <h3>Honolulu, Hawaii</h3>
+     <p>January 5th and 6th 2019</p>
+     <p>For more information, Contact <a href="mailto:boliboj001@hawaii.rr.com">boliboj001@hawaii.rr.com</a>
+  </div>
+
+  <a href="#west2019" class="animated_popup"><h1>22 Annual Westwater Intensive Training</h1></a>
+  <h2>Friday, April 26th – Saturday, May 4th 2019</h2>
+  <div id="west2019" style="display:none" class="image-popup" class="book-details-popup">
+    <h3>22 Annual Westwater Intensive Training </h3>
+     <p>Friday, April 26th – Saturday, May 4th 2019</p>
+     <a href="wwform.docx">View And Download Registration Form</a>
+     <p>
+      Westwater camp is located on the beautiful high desert of Utah, near the Colorado border. It’s about 45 minutes from the closest airport (GJT, Grand Junction, Colorado), or a five hour drive from either Denver or Salt Lake City. Miles away from civilization, students from around the world have found the solitude and nature of the area a powerful adjunct to their study of Taiji for over 20 years.
+
+      The camp provides no indoor sleeping accommodations. Students are to bring their own tent, or indicate other sleeping arrangement and location, if known, referencing the site map. Temperatures can drop below freezing at night and be hot during the day. The usually dry region is subject to high winds, dust, and intense sun. Besides toiletries, pack towels, flashlight, and other items you may need for your safety and comfort.
+
+      All pre-camp arrivals are charged $50 per night with meals included. Volunteers pay only $20. 
+
+      Camp fees listed on the Registration Form include buffet-style meals prepared on-site mostly by our professional chef. Facilities include large Practice Hall, Dining room, outside toilets, Mens and womens’ shower rooms, and use of washing machine with detergent. For more information ask alexdongtaiji@gmail.com.
+    </p>
+  </div>
+
+  <a href="#italy" class="animated_popup"><h1>The La Gavina-Siena Italy </h1></a>
+  <h2>June 1st to 6th 2019</h2>
+  <div id="italy" style="display:none" class="image-popup" class="book-details-popup">
+    <h3>The La Gavina-Siena Italy </h3>
+     <p>June 1st to 6th 2019</p>
+     <p><a href="italy.docx">View and download for more information</a>
+  </div>
+
+  <a href="#london" class="animated_popup"><h1>London, England</h1></a>
+  <h2>June 14th to 16th 2019</h2>
+  <div id="london" style="display:none" class="image-popup" class="book-details-popup">
+    <h3>London, England</h3>
+     <p>June 14th to 16th 2019</p>
+     <p>For more information, Contact <a href="mailto:taichichuan@gmail.com">taichichuan@gmail.com</a>
+  </div>
       <!-- elements end -->
 
     </div>
