--- a/workshops/index.html
+++ b/workshops/index.html
@@ -87,7 +87,7 @@
   <div id="italy" style="display:none" class="image-popup" class="book-details-popup">
     <h3>The La Gavina-Siena Italy </h3>
      <p>June 1st to 6th 2019</p>
-     <p><a href="italy.docx">View and download for more information</a>
+     <p><a href="https://www.dongtaichisiena.it/masterdongsiena ">www.dongtaichisiena.it/masterdongsiena For more information</a>
   </div>
 
   <a href="#london" class="animated_popup"><h1>London, England</h1></a>
