--- a/workshops/index.html
+++ b/workshops/index.html
@@ -97,6 +97,18 @@
      <p>June 14th to 16th 2019</p>
      <p>For more information, Contact <a href="mailto:taichichuan@gmail.com">taichichuan@gmail.com</a>
   </div>
+	    
+  <a href="#rosendale" class="animated_popup"><h1>Rosendale, New York</h1></a>
+  <h2>October 11th to 15th 2019</h2>
+  <div id="rosendale" style="display:none" class="image-popup" class="book-details-popup">
+    <h3>Rosendale, New York/h3>
+     <p>October 11th to 15th 2019</p>
+<p>Friday Oct. 11th-Fast, Fajin and Hao.</p>
+	    <p>Saturday Oct. 12th-Long and Simplified Slow Form and Principles.</p>
+	    <p>Sunday Oct. 13th to Tue. Oct. 15th-Push Hands, applications and energy work. </p>
+     <p>For more information, Contact <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com </a>
+  </div>
+	    
       <!-- elements end -->
 
     </div>
