--- a/workshops/index.html
+++ b/workshops/index.html
@@ -66,6 +66,25 @@
     <div id="london" style="display:none" class="image-popup" class="book-details-popup">
       <h3>London, England</h3>
        <p>June 14th to 16th 2019</p>
+	<p><strong>London England
+	Village Hall,  Vicarage Road , Dagenham, RM10 9SD</strong></p>
+
+	<p>Friday evening - Qigong 
+	<br>6-8 pm 25</p>
+
+	<p>Saturday - Long Form
+	<br>10:00 am - 12:30 pm 35
+	<br>2:00 pm - 4:30 pm 35
+	<br>Both classes 60</p>
+
+	<p>Sunday morning - Sticks
+	<br>10:00 am - 12:30 pm 35</p>
+
+	<p>Sunday afternoon - Push Hands
+	<br>2 pm - 4:30 pm 35</p>
+
+	<p>Full workshop 140
+	<br>Teachers 130 for the full workshop. </p>
        <p>For more information, Contact <a href="mailto:taichichuan@gmail.com">taichichuan@gmail.com</a>
     </div>
 	    
