--- a/workshops/index.html
+++ b/workshops/index.html
@@ -107,7 +107,7 @@
         <br>$160 - registered instructors pay by June 30 2019
         <br>Send payment to Alex Dong PO Box 750962 forest Hills NY 11375 USA
         <br>Via Paypal friends and family(no fee) or Chase Bank Quickpay to <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a> 
-        <br><a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a>
+        <br>Please contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a> for more information
        </p>    
     </div>
 	    
