--- a/classes/belohorizonte/index.html
+++ b/classes/belohorizonte/index.html
@@ -57,6 +57,20 @@
       <p>Website: <a href="http://www.taichisentidos.com" target="_blank">Tai Chi Sentidos</a></p>
     </div>
   </section>
+  
+  <section class="history-classes">
+    <div class="history-container classes-container">
+      <h1>Instructor: JULIETA HENRIQUES FERREIRA</h1>
+    </div>
+
+    <div class="history-container classes-container instructor-container">
+      <a href="#julieta-popup class="animated_popup"><h1>Instructor: Sandra Arruda</h1></a>
+
+      <p>Contact: <a href="mailto:LETAFERREIRA@YAHOO.COM.BR">LETAFERREIRA@YAHOO.COM.BR</a></p>
+      <p>Phone: +55 31 991717724</p>
+      <p>Facebook: Facebook @equilibrio.taichi</p>
+    </div>
+  </section>
 
   <footer>
     <nav class="footer-homepage">
