--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -66,11 +66,21 @@
       <br>Website: <a href="http://www.taichiathens.gr" target="_blank">www.taichiathens.gr</a></p>
     </div>
 
-    <div class="history-container classes-container">
-    <h1>Instructor: Elsa Kasapoglou</h1></a>
-    <p>Energy Tai Chi Chuan</br>
-    Address: Fokidos str. 9-11, Pireaus</br>
-     Phone: +30 6974 204 955 email: <a href="mailto:terrangirl.01@gmail.com">terrangirl.01@gmail.com</a></p>
+    <div class="history-container classes-container instructor-container">
+      <h1>Instructor: Elsa Kasapoglou</h1></a>
+      <p>Energy Tai Chi Chuan</br>
+      Address: Fokidos str. 9-11, Pireaus</br>
+       Phone: +30 6974 204 955 email: <a href="mailto:terrangirl.01@gmail.com">terrangirl.01@gmail.com</a></p>
+    </div>
+
+    <div class="history-container classes-container instructor-container">
+      <h1>Instructor: Argyris Tsepelikas</h1></a>
+      <p>Exarchia, Athens Greece</p>
+      <p>Tel. 6987337384
+        <br>Phone: +30 6974 204 955
+        <br>Website: <a href="www.taichiqigong.gr">www.taichiqigong.gr</a>
+        <br>fb: @taichiexarchia 
+      </p>
     </div>
   </section>
 
