--- a/classes/index.html
+++ b/classes/index.html
@@ -73,6 +73,8 @@
         <li><a href="vejle">Vejle, Denmark</a></li>
         <li><a href="london">London, England</a></li>
         <li><a href="southhampton">Southampton, England</a></li>
+        <li><a href="hockley">Hockley, England</a></li>
+        <li><a href="devon">Devon, England</a></li>
         <li><a href="grenoble">Grenoble, France</a></li>
         <li><a href="athens">Athens, Greece</a></li>
         <li><a href="siena">Siena, Italy</a></li>
