--- a/workshops/index.html
+++ b/workshops/index.html
@@ -136,7 +136,7 @@
        <p>Friday Oct. 11th-Fast, Fajin and Hao.</p>
        <p>Saturday Oct. 12th-Long and Simplified Slow Form and Principles.</p>
        <p>Sunday Oct. 13th to Tue. Oct. 15th-Push Hands, applications and energy work. </p>
-	<p><a href="https://docs.google.com/document/d/1x-FcOYr9jRkDB7xVy7AEUvwZI2A4Q7vmLfr-a3ZwhUc/edit?ts=5d5bf43a">Download Form Here</a></p>
+	<p><a href="nyworkshop.pdf">Download Form Here</a></p>
        <p>For more information, Contact <a href="mailto:alexdongtaiji@gmail.com ">alexdongtaiji@gmail.com </a>
     </div>
 	    
