--- a/workshops/index.html
+++ b/workshops/index.html
@@ -59,6 +59,7 @@
     <h2>October 4th to 6th 2019</h2>
     <div id="montreal" style="display:none" class="image-popup" class="book-details-popup">
       <h3>Montreal, Canada</h3>
+      <p>October 4th to 6th 2019</p>
        <p>For more information, Contact <a href="mailto:grace@taichiclub.com">grace@taichiclub.com</a>
     </div>
 	    
@@ -78,6 +79,7 @@
     <h2>October 18-20 2019</h2>
     <div id="montreal" style="display:none" class="image-popup" class="book-details-popup">
       <h3>Moncton, Canada</h3>
+      <p>October 18th to 20th 2019</p>
        <p>For more information, Contact <a href="mailto:claire14@nb.sympatico.ca">claire14@nb.sympatico.ca </a>
     </div>
 	    
