--- a/classes/athens/index.html
+++ b/classes/athens/index.html
@@ -81,6 +81,15 @@
         <br>fb: @taichiexarchia 
       </p>
     </div>
+
+    <div class="history-container classes-container instructor-container">
+      <h1>thens-Certified Instructor Mixalis Kiminas.</h1>
+      <p>Koukaki Tai Chi Association.</p>
+      <p>Email: info@yinyang-taichi.gr.</p>
+      <p>kiminas193@gmail.com.</p>
+      <p>Phone: 6973354302</p>
+      <p><a href="http://yinyang-taichi.gr/timetable/category/mixalis-kiminas/">http://yinyang-taichi.gr/timetable/category/mixalis-kiminas/</a></p>
+    </div>
   </section>
 
 
