--- a/classes/index.html
+++ b/classes/index.html
@@ -70,6 +70,7 @@
         <li><a href="belohorizonte">Belo Horizonte, Brazil</a></li>
         <li><a href="zagreb">Zagreb, Croatia</a></li>
         <li><a href="prague">Prague, Czech Republic</a></li>
+        <li><a href="copenhagen">Copenhagen, Denmark</a></li>
         <li><a href="vejle">Vejle, Denmark</a></li>
         <li><a href="london">London, England</a></li>
         <li><a href="southhampton">Southampton, England</a></li>
