--- a/workshops/index.html
+++ b/workshops/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <section class="history workshops link-container">
-    <div class="history-container">>
+    <div class="history-container">
 
       <a href="#austin" class="animated_popup">
         <h1>Austin Texas</h1>
