update london workshop

--- a/classes/london/index.html
+++ b/classes/london/index.html
@@ -66,10 +66,10 @@
         <p>I like tai chi because it's mentally and physically stimulating, and
         makes you feel great. I live in Essex.</p>
       </div>
+      <p>I'm currently teaching upstairs at: The Upper Room: 8 Greenland Street, London, NW1 0ND</p>
+      <p>11:00 am until 13:00 pm every Wednesday.
       <p>Phone: 07952 593337</p>
-      <p>Wednesday Beginners and Intermediate 11:00 to 12:20
-      <br><a href="http://www.streetmap.co.uk/streetmap.dll?postcode2map?NW1+7JY" target="_blank">Soho Gyms, 193, Camden High Street, London NW1 7JY.</a> <br/>
-        Phone: 020 7482 4524. Cost &pound;13.00</p>
+      <p>or email: <a href="mailto:arthurmartin2000@hotmail.com">arthurmartin2000@hotmail.com</a></p>
   
       
     </div>
