--- a/workshops/index.html
+++ b/workshops/index.html
@@ -34,6 +34,17 @@
   <section class="history workshops link-container">
     <div class="history-container">
 
+      <a href="#santa" class="animated_popup">
+        <h1>Santa Barbara, CA</h1>
+      </a>
+      <h2>Feb. 29 to March 1, 2020</h2>
+      <div id="santa" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Santa Barbara, CA</h3>
+        <p>Feb. 29 to March 1, 2020</p>
+        <p>Contact <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a></p>
+        <p>Workshop content: Tai Chi Fundamental Qigongs, Long Form and Kai-He.</p>
+      </div>
+
       <a href="#austin" class="animated_popup">
         <h1>Austin Texas</h1>
       </a>
@@ -42,6 +53,7 @@
         <h3>Austin Texas</h3>
         <p>March 27th to 29th 2020</p>
         <p>Contact Jane Son for more information <a href="mailto:miss.llenna@gmail.com">miss.llenna@gmail.com</a></p>
+        <p><a href="austin.docx">Download Form</a></p>
       </div>
 
       <a href="#utah" class="animated_popup">
@@ -55,6 +67,17 @@
         <p>
           <a href="https://docs.google.com/document/d/1koc1XRFHT-NN5cdYWRo8i-XsO0GJN7UKeX4rF48lqmg/edit?usp=sharing">Registration link </a>
         </p>
+      </div>
+
+      <a href="#cz" class="animated_popup">
+        <h1>Prague, Czech Republic</h1>
+      </a>
+      <h2>May 22 to 24, 2020</h2>
+      <div id="cz" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Prague, Czech Republic</h3>
+        <p>May 22 to 24, 2020</p>
+        <p>Contact <a href="mailto:sarka.rajtorova@gmail.com">sarka.rajtorova@gmail.com</a></p>
+        <p>Workshop content: Qigong, Forms and Push Hands</p>
       </div>
 
       <a href="#Denmark" class="animated_popup">
@@ -95,6 +118,7 @@
         <h3>China 2020</h3>
         <p>Date and details to be announced </p>
         <p>Grand gathering of Dong Style Tai Chi</p>
+        <p><a href="gg2020.pdf">Download Form</a></p>
       </div>
 
     </div>
