--- a/store/index.html
+++ b/store/index.html
@@ -31,6 +31,11 @@
     <h3>Purchase Books and DVDs Created By Master Alex Dong</h3>
   </div>
 
+  <div class="digital-store">
+    <h2>Download Digital Videos</h2>
+    <h3>Visit <a href="http://www.dongtaichionline.com" target="_blank">dongtaichionline.com</a> to download Digital Videos of Tai Chi Fundamental Qigongs, Simplified Slow Form, Advance Slow Form, Double Sticks, and more to come...</h3>
+  </div>
+
   <section class="history-classes store-section books-section">
 
     <div class="history-container store">
