--- a/workshops/index.html
+++ b/workshops/index.html
@@ -90,6 +90,16 @@
         <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
       </div>
 
+      <a href="#london" class="animated_popup">
+        <h1>London UK</h1>
+      </a>
+      <h2>May 30 to 31 2020</h2>
+      <div id="london" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>London UK</h3>
+        <p>May 30 to 31 2020</p>
+        <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+      </div>
+
       <a href="#siena" class="animated_popup">
         <h1>Siena Italy</h1>
       </a>
