--- a/store/index.html
+++ b/store/index.html
@@ -33,7 +33,7 @@
 
   <div class="digital-store">
     <h2>Download Digital Videos</h2>
-    <h3>Visit <a href="http://www.dongtaichionline.com" target="_blank">dongtaichionline.com</a> to download Digital Videos of Tai Chi Fundamental Qigongs, Simplified Slow Form, Advance Slow Form, Double Sticks, and more to come...</h3>
+    <h3>Visit <a href="http://www.dongtaichionline.com" target="_blank">dongtaichionline.com</a> to download Digital Videos of Tai Chi Fundamental Qigongs, Simplified Slow Form, Advance Slow Form, and Double Sticks</h3>
   </div>
 
   <section class="history-classes store-section books-section">
