--- a/workshops/index.html
+++ b/workshops/index.html
@@ -34,28 +34,6 @@
   <section class="history workshops link-container">
     <div class="history-container">
 
-      <a href="#santa" class="animated_popup">
-        <h1>Santa Barbara, CA</h1>
-      </a>
-      <h2>Feb. 29 to March 1, 2020</h2>
-      <div id="santa" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Santa Barbara, CA</h3>
-        <p>Feb. 29 to March 1, 2020</p>
-        <p>Contact <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a></p>
-        <p>Workshop content: Tai Chi Fundamental Qigongs, Long Form and Kai-He.</p>
-      </div>
-
-      <a href="#austin" class="animated_popup">
-        <h1>Austin Texas</h1>
-      </a>
-      <h2>March 27th to 29th 2020</h2>
-      <div id="austin" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Austin Texas</h3>
-        <p>March 27th to 29th 2020</p>
-        <p>Contact Jane Son for more information <a href="mailto:miss.llenna@gmail.com">miss.llenna@gmail.com</a></p>
-        <p><a href="austin.docx">Download Form</a></p>
-      </div>
-
       <a href="#utah" class="animated_popup">
         <h1>Westwater Utah</h1>
       </a>
@@ -108,6 +86,27 @@
         <h3>Siena Italy</h3>
         <p>June 5th to 11th 2020</p>
         <p><a href="https://www.dongtaichisiena.it/masterdongsiena">https://www.dongtaichisiena.it/masterdongsiena</a></p>
+      </div>
+      
+      <a href="#Washington" class="animated_popup">
+        <h1>Olympia WA</h1>
+      </a>
+      <h2>July 31st to August 2nd 2020</h2>
+      <div id="Washington" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Upstate New York</h3>
+        <p>July 31st to August 2nd 2020</p>
+        <p>Contact Andy Holmes for more information: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
+      </div>
+      
+      <a href="#santa" class="animated_popup">
+        <h1>Santa Barbara, CA</h1>
+      </a>
+      <h2>August 7th to 9th, 2020</h2>
+      <div id="santa" style="display:none" class="image-popup" class="book-details-popup">
+        <h3>Santa Barbara, CA</h3>
+        <p>August 7th to 9th, 2020</p>
+        <p>Contact <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a></p>
+        <p>Workshop content: Tai Chi Fundamental Qigongs, Long Form, Push Hands and Kai-He.</p>
       </div>
 
       <a href="#upstate" class="animated_popup">
