--- a/classes/olympia/index.html
+++ b/classes/olympia/index.html
@@ -43,6 +43,16 @@
       <p>Contact: <a href="mailto:wildcats31@earthlink.net">wildcats31@earthlink.net</a></p>
     </div>
 
+    <div class="history-container classes-container">
+      <h1>Instructor: Barbara Helynn Heard</h1>
+      <p>
+        <a href="http://fireflyyoga.net/teachers">http://fireflyyoga.net/teachers </a>
+      <p>
+      <p>
+        <a href="mailto:barbaraheard@msn.com  ">barbaraheard@msn.com  </a>
+      </p>
+    </div>
+
   </section>
 
   <footer>
