--- a/classes/olympia/index.html
+++ b/classes/olympia/index.html
@@ -32,18 +32,18 @@
 
   <section class="history-classes link-container">
     
-      <div class="history-container classes-container">
+      <div class="history-container classes-container instructor-container">
         <h1>Instructor: Andy Holmes</h1> 
             <p><a href="http://andyholmes.us/Schedule.html" target="_blank">Full Class Schedule</a>
             <br/>Email: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
       </div>
     
-    <div class="history-container classes-container">
+    <div class="history-container classes-container instructor-container">
       <h1>Instructor: Terry Johnson</h1></a>
       <p>Contact: <a href="mailto:wildcats31@earthlink.net">wildcats31@earthlink.net</a></p>
     </div>
 
-    <div class="history-container classes-container">
+    <div class="history-container classes-container instructor-container">
       <h1>Instructor: Barbara Helynn Heard</h1>
       <p>
         <a href="http://fireflyyoga.net/teachers">http://fireflyyoga.net/teachers </a>
