--- a/workshops/index.html
+++ b/workshops/index.html
@@ -37,22 +37,11 @@
       <a href="#Washington" class="animated_popup">
         <h1>Olympia WA</h1>
       </a>
-      <h2>July 31st to August 2nd 2020</h2>
+      <h2>August 15 to 16, 2020</h2>
       <div id="Washington" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Upstate New York</h3>
-        <p>July 31st to August 2nd 2020</p>
+        <h3>Olympia WA</h3>
+        <p>August 15 to 16, 2020</p>
         <p>Contact Andy Holmes for more information: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
-      </div>
-      
-      <a href="#santa" class="animated_popup">
-        <h1>Santa Barbara, CA</h1>
-      </a>
-      <h2>August 7th to 9th, 2020</h2>
-      <div id="santa" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Santa Barbara, CA</h3>
-        <p>August 7th to 9th, 2020</p>
-        <p>Contact <a href="mailto:taichitoni1@hotmail.com">taichitoni1@hotmail.com</a></p>
-        <p>Workshop content: Tai Chi Fundamental Qigongs, Long Form, Push Hands and Kai-He.</p>
       </div>
 
       <a href="#upstate" class="animated_popup">
