--- a/classes/olympia/index.html
+++ b/classes/olympia/index.html
@@ -46,7 +46,7 @@
     <div class="history-container classes-container instructor-container">
       <h1>Instructor: Barbara Helynn Heard</h1>
       <p>
-        <a href="http://fireflyyoga.net/teachers">http://fireflyyoga.net/teachers </a>
+        <a href="https://www.lomilomi-massage.org/Taiji-Classes.html">https://www.lomilomi-massage.org/Taiji-Classes.html</a>
       <p>
       <p>
         <a href="mailto:barbaraheard@msn.com  ">barbaraheard@msn.com  </a>
