--- a/workshops/index.html
+++ b/workshops/index.html
@@ -33,36 +33,75 @@
 
   <section class="history workshops link-container">
     <div class="history-container">
+
       
       <a href="#Washington" class="animated_popup">
-        <h1>Olympia WA</h1>
+
+        <h1>Olympia, WA</h1>
+
       </a>
-      <h2>August 15 to 16, 2020</h2>
-      <div id="Washington" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Olympia WA</h3>
-        <p>August 15 to 16, 2020</p>
-        <p>Contact Andy Holmes for more information: <a href="mailto:slowset@gmail.com">slowset@gmail.com</a></p>
+
+      <h2>July. 16 to 18, 2021</h2>
+
+      <div id="washington" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Olimpia, WA</h3>
+
+        <p>July 16 to 18, 2021</p>
+
+        <p>Contact <a href="mailto:slowset@gmail.com ">slowset@gmail.com </a></p>
+
+        <p>Workshop content: Tai Chi Fundamental Qigongs, Tai Chi and more.</p>
+
+      </div> 
+
+
+
+
+    <a href="#westwater" class="animated_popup">
+        <h1>Westwater, UT</h1>
+
+      </a>
+
+      <h2>Oct. 8 to 14, 2021</h2>
+
+      <div id="westwater" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Westwater, UT</h3>
+
+        <p>Oct. 8 to 14, 2021</p>
+
+        <p>Contact <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
+
+        <p>Workshop content: Fundamental Qigong, Forms and Push Hands.</p>
+
       </div>
 
-      <a href="#upstate" class="animated_popup">
-        <h1>Upstate New York</h1>
-      </a>
-      <h2>October 16th to 19th 2020</h2>
-      <div id="upstate" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>Upstate New York</h3>
-        <p>October 16th to 19th 2020</p>
-        <p>Contact Alex Dong for more information: <a href="mailto:alexdongtaiji@gmail.com">alexdongtaiji@gmail.com</a></p>
-      </div>
 
-      <a href="#china" class="animated_popup">
-        <h1>China 2020</h1>
+
+
+
+
+
+
+   <a href="#austin" class="animated_popup">
+
+        <h1>Austin, TX</h1>
+
       </a>
-      <h2>Date and details to be announced </h2>
-      <div id="china" style="display:none" class="image-popup" class="book-details-popup">
-        <h3>China 2020</h3>
-        <p>Date and details to be announced </p>
-        <p>Grand gathering of Dong Style Tai Chi</p>
-        <p><a href="gg2020.pdf">Download Form</a></p>
+
+      <h2>Dec. 10 to 12, 2021</h2>
+
+      <div id="austin" style="display:none" class="image-popup" class="book-details-popup">
+
+        <h3>Austin, TX</h3>
+
+        <p>Dec. 10 to 12, 2021</p>
+
+        <p>Contact <a href="mailto:miss.llenna@gmail.com">miss.llenna@gmail.com </a></p>
+
+        <p>Workshop content: Tai Chi Fundamental Qigongs, Long Form, Saber and Push Hands.</p>
+
       </div>
 
     </div>
