--- a/workshops/index.html
+++ b/workshops/index.html
@@ -35,7 +35,7 @@
     <div class="history-container">
 
       
-      <a href="#Washington" class="animated_popup">
+      <a href="#washington" class="animated_popup">
 
         <h1>Olympia, WA</h1>
 
@@ -58,9 +58,9 @@
 
 
 
-    <a href="#westwater" class="animated_popup">
+    
+      <a href="#westwater" class="animated_popup">
         <h1>Westwater, UT</h1>
-
       </a>
 
       <h2>Oct. 8 to 14, 2021</h2>
