add advance tai chi dvd

--- a/store/index.html
+++ b/store/index.html
@@ -131,6 +131,24 @@
         </form>
         </h6>
       </div>
+      
+      <div class="store-book-container">
+        <h3><span class="red-highlight">NEW!</span> Advance Tai Chi</h3>
+        <h4>$40.00</h4>
+        <a href="#advance-popup" class="animated_popup"><img src="../assets/images/simplifiedtaichidvd.jpg"></a>
+        <h5><a href="#simplifiedtaichi-popup" class="animated_popup book-details-link">DVD Details</a></h5>
+        <div id="advancetaichi-popup" style="display:none">
+          <h3>Advance Tai Chi</h3>
+          <p>Dong Style Advance Form focuses on the advanced techniques of the Slow Form. As in the Simplified Form, most moves have both sides and new techniques. The beautiful movements have a higher degree of difficulty so it’s more suitable for students with some experience. There are new techniques like Cai (Yank), Lie (break), Zhou (Elbow), Kao (Shoulder), Reverse Cloud Hands and opposite side Single Whip and Snake Creeps Down. Practice the Advance Form will speed up your internal development, develop strength and flexibility.</p>
+        </div>
+        <h6>
+        <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="U663AFYGU3GQQ">
+        <input type="submit" value="Purchase" class="paypal-link" border="0" name="submit">
+        </form>
+        </h6>
+      </div>
 
       <div class="store-book-container">
         <h3><span class="red-highlight">NEW!</span> The Fundamental Qigongs 3</h3>
