update advance tai chi image

--- a/store/index.html
+++ b/store/index.html
@@ -135,7 +135,7 @@
       <div class="store-book-container">
         <h3><span class="red-highlight">NEW!</span> Advance Tai Chi</h3>
         <h4>$40.00</h4>
-        <a href="#advance-popup" class="animated_popup"><img src="../assets/images/simplifiedtaichidvd.jpg"></a>
+        <a href="#advance-popup" class="animated_popup"><img src="../assets/images/advancetaichi.jpeg"></a>
         <h5><a href="#simplifiedtaichi-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="advancetaichi-popup" style="display:none">
           <h3>Advance Tai Chi</h3>
