--- a/store/index.html
+++ b/store/index.html
@@ -134,8 +134,8 @@
       
       <div class="store-book-container">
         <h3><span class="red-highlight">NEW!</span> Advance Tai Chi</h3>
-        <h4>$40.00</h4>
-        <a href="#advance-popup" class="animated_popup"><img src="../assets/images/advancetaichi.jpeg"></a>
+        <h4>$50.00</h4>
+        <a href="#advancetaichi-popup" class="animated_popup"><img src="../assets/images/advancetaichi.jpeg"></a>
         <h5><a href="#simplifiedtaichi-popup" class="animated_popup book-details-link">DVD Details</a></h5>
         <div id="advancetaichi-popup" style="display:none">
           <h3>Advance Tai Chi</h3>
